# cod

./: .gitignore  Anchor.toml  BUILD_FIXES_SUMMARY.md  COMPLETE_BUILD_FIXES.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_GUIDE.md  LICENSE  PERMANENT_BUILD_SUCCESS.md  README.md  ULTIMATE_SUCCESS_ALL_ERRORS_FIXED.md  check_specific_errors.sh  fix_all.sh  package-lock.json  package.json  tsconfig.json
examples/: basic-usage.ts
programs/dao-reputation-scoreboard/: Cargo.toml
programs/dao-reputation-scoreboard/src/: errors.rs  lib.rs  state.rs  utils.rs
programs/dao-reputation-scoreboard/src/instructions/: achievements.rs  bulk_operations.rs  config.rs  decay.rs  export.rs  initialize.rs  leaderboard.rs  mod.rs  reputation.rs  role_unlock.rs  season.rs  streak.rs  vote.rs
scripts/: build-and-test.sh  build-verification.sh  deploy.sh  extreme-stack-fix.sh  final-build-check.sh  final-build-fix.sh  final-build-success.sh  final-error-elimination.sh  final-error-fix.sh  final-success-confirmation.sh  final-success-test.sh  fix-and-setup.sh  initialize-system.ts  resolve-conflicts-and-build.sh  setup.sh  test-build-fix.sh  ultimate-build-fix.sh  ultimate-error-resolution.sh  ultimate-success-summary.sh  ultimate-success-verification.sh  validate-build.sh
tests/: dao-reputation-scoreboard.ts
