[package]
name = "dao-reputation-scoreboard"
version = "0.1.0"
description = "A comprehensive DAO reputation tracking system on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dao_reputation_scoreboard"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "~1.17.0"